update lab_detail job_expert and research_director

--- a/laboratory_detail.html
+++ b/laboratory_detail.html
@@ -179,7 +179,7 @@
 												<div style="text-indent:2em;">
 													<h1 class="text-main">
 														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>研究室主任：&nbsp;&nbsp;</small>
-														<small id="job_expert"></small>
+														<small id="job_expert"></small><small>&nbsp;&nbsp;(兼)</small>
 						            				</h1>
 												</div>
 												<div style="text-indent:2em;">
